Enjoy toooting! This version includes following improvements and fixes:
- Allowing adding more context of reports