@@ -3,11 +3,11 @@ import AsyncStorage from '@react-native-async-storage/async-storage'
 import { AnyAction, configureStore, Reducer } from '@reduxjs/toolkit'
 import contextsMigration, { ContextsLatest } from '@utils/migrations/contexts/migration'
 import instancesMigration from '@utils/migrations/instances/migration'
-import settingsMigration from '@utils/migrations/settings/migration'
+import settingsMigration, { SettingsLatest } from '@utils/migrations/settings/migration'
 import appSlice, { AppState } from '@utils/slices/appSlice'
 import contextsSlice from '@utils/slices/contextsSlice'
 import instancesSlice, { InstancesState } from '@utils/slices/instancesSlice'
-import settingsSlice, { SettingsState } from '@utils/slices/settingsSlice'
+import settingsSlice from '@utils/slices/settingsSlice'
 import { Platform } from 'react-native'
 import { TypedUseSelectorHook, useDispatch, useSelector } from 'react-redux'
 import {
@@ -72,7 +72,7 @@ const store = configureStore({
       AnyAction
     >,
     settings: persistReducer(settingsPersistConfig, settingsSlice) as Reducer<
-      SettingsState,
+      SettingsLatest,
       AnyAction
     >
   },
