@@ -1,0 +1,8 @@
+export type SettingsV4 = {
+  fontsize: -1 | 0 | 1 | 2 | 3
+  language: string
+  theme: 'light' | 'dark' | 'auto'
+  darkTheme: 'lighter' | 'darker'
+  browser: 'internal' | 'external'
+  autoplayGifv: boolean
+}
