@@ -1,2 +1,3 @@
 toooting愉快！此版本包括以下改进和修复：
 - 可添加举报细节
+- 新增暂停自动播放gif动画选项
